# terminator

./: CODE_OF_CONDUCT.md  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: push.yml
examples/: debug-2015.rs  debug.rs  terminator.rs
src/: lib.rs
